Add paperclip for image upload for business

--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -13,6 +13,7 @@
   <tbody>
     <% @businesses.each do |business| %>
       <tr>
+        <td><%= image_tag business.image.url(:medium) %></td>
         <td><%= business.name %></td>
         <td><%= business.address %></td>
         <td><%= business.rating %></td>
