--- a/app/views/businesses/_form.html.erb
+++ b/app/views/businesses/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@business) do |f| %>
+<%= form_for @business, html: { multipart: true } do |f| %>
   <% if @business.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@business.errors.count, "error") %> prohibited this business from being saved:</h2>
@@ -23,6 +23,10 @@
     <%= f.label :rating %><br>
     <%= f.text_field :rating %>
   </div>
+  <div class="field">
+    <%= f.label :image %><br>
+    <%= f.file_field :image %>
+  </div> 
   <div class="actions">
     <%= f.submit %>
   </div>
