--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -1,30 +1,17 @@
-<h1>Listing businesses</h1>
+<% if !user_signed_in? %>
+  <div class="jumbotron">
+    <h1>Heading out? Bring Yelper with you.</h1>
+    <p>Hashtag hoodie mumblecore selfies. Authentic keffiyeh leggings Kickstarter, narwhal jean shorts XOXO Vice Austin cardigan. Organic drinking vinegar freegan pickled.</p>
+    <p><%= link_to "Sign Up To Write A Review", new_user_registration_path, class: "btn btn-danger btn-lg" %></p>
+  </div>
+<% end %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Address</th>
-      <th>Rating</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @businesses.each do |business| %>
-      <tr>
-        <td><%= image_tag business.image.url(:medium) %></td>
-        <td><%= business.name %></td>
-        <td><%= business.address %></td>
-        <td><%= business.rating %></td>
-        <td><%= link_to 'Show', business %></td>
-        <td><%= link_to 'Edit', edit_business_path(business) %></td>
-        <td><%= link_to 'Destroy', business, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Business', new_business_path %>
+<div class="row">
+  <% @businesses.each do |business| %>
+    <div class="col-sm-6 col-md-3">
+      <div class="thumbnail">
+        <%= link_to (image_tag business.image.url(:medium), class: 'image'), business %>
+      </div>
+    </div>
+   <% end %>
+</div>
