--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -1,9 +1,9 @@
-
 <div class="panel panel-default">
   <div class="panel-body">
     <div class="row">
       <div class="col-md-4">
         <%= image_tag @business.image.url(:medium) %>
+        <div class="star-rating" data-score = <%= @avg_review %> ></div><em><%= "#{@reviews.length} reviews"%></em>
         <div class="table-responsive">
           <table class="table">
             <tbody>
@@ -21,7 +21,25 @@
               </tr>
             </tbody>
           </table>
+          <%= link_to "Write a Review", new_business_review_path(@business), class: "btn btn-danger" %>
         </div>
+      </div>
+      <div class="col-md-7 col-md-offset-1">
+        <h1 class="review_title"><%= @business.name %></h1>
+        <p><%= @business.address %></p>
+
+        <% if @reviews.blank? %>
+          <h3>No reviews just yet, would you like to add the first?</h3>
+          <%= link_to "Write a Review", new_business_review_path(@business), class: "btn btn-danger" %>
+        <% else %>
+          <% @reviews.each do |review| %>
+            <div class="reviews">
+              <div class="star-rating" data-score= <%= review.rating %> ></div>
+              <p>Comment: <%= review.comment %></p>
+              <p>Price: <%= review.price %></p>
+            </div>
+          <% end %>
+        <% end %>
       </div>
     </div>
   </div>
@@ -29,3 +47,13 @@
 
 <%= link_to 'Edit', edit_business_path(@business) %> |
 <%= link_to 'Back', businesses_path %>
+
+<script>
+  $('.star-rating').raty({
+    path: '/assets/',
+    readOnly: true,
+    score: function() {
+      return $(this).attr('data-score');
+    }
+  });
+</script>
