--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@review) do |f| %>
+<%= form_for([@business, @review]) do |f| %>
   <% if @review.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@review.errors.count, "error") %> prohibited this review from being saved:</h2>
@@ -12,8 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :rating %><br>
-    <%= f.number_field :rating %>
+    <div id="star-rating"></div><p id="hint" type="text"></p>
   </div>
   <div class="field">
     <%= f.label :comment %><br>
@@ -27,3 +26,13 @@
     <%= f.submit %>
   </div>
 <% end %>
+
+<script>
+  $('#star-rating').raty({ 
+    path: '/assets',
+    scoreName: 'review[rating]',
+    target: '#hint',
+    hints: ["Eek! Methinks not.", "Meh. I've experienced better.", "A-OK", "Yay! I'm a fan.", "Woohoo! As good as it gets!"],
+    targetKeep: true
+  });
+</script>
