--- a/app/views/businesses/_form.html.erb
+++ b/app/views/businesses/_form.html.erb
@@ -20,6 +20,14 @@
     <%= f.text_area :address %>
   </div>
   <div class="field">
+    <%= f.label :latitude %><br>
+    <%= f.text_area :latitude %>
+  </div>
+  <div class="field">
+    <%= f.label :longitude %><br>
+    <%= f.text_area :longitude %>
+  </div>
+  <div class="field">
     <%= f.label :rating %><br>
     <%= f.text_field :rating %>
   </div>
