--- a/app/assets/stylesheets/businesses.css.scss
+++ b/app/assets/stylesheets/businesses.css.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the Businesses controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.basic-info .brief-info .item {
+  margin: 0 10px;
+  vertical-align: middle;
+  color: #999;
+}
+
+.basic-info .expand-info .address {
+  margin-top: 10px;
+}
