--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -27,11 +27,15 @@ body {
 .review_title {
   margin: 0 0 20px 0;
 }
-.reviews {
+.review-wrapper {
   padding: 15px 0;
   border-bottom: 1px solid #EAEAEA;
   .star-rating {
     padding-bottom: 8px;
   }
+}
+
+.review-map {
+  margin: 10px auto;
 }
   
