--- a/app/views/businesses/_form.html.erb
+++ b/app/views/businesses/_form.html.erb
@@ -1,41 +1,50 @@
-<%= form_for @business, html: { multipart: true } do |f| %>
-  <% if @business.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@business.errors.count, "error") %> prohibited this business from being saved:</h2>
+<div class="col-md-8 col-md-offset-2">
+  <div class="row">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <div class="panel-body">
+          <%= form_for @business, html: { multipart: true } do |f| %>
+            <% if @business.errors.any? %>
+              <div id="error_explanation">
+                <h2><%= pluralize(@business.errors.count, "error") %> prohibited this business from being saved:</h2>
+                <ul>
+                <% @business.errors.full_messages.each do |message| %>
+                  <li><%= message %></li>
+                <% end %>
+                </ul>
+              </div>
+            <% end %>
 
-      <ul>
-      <% @business.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+            <div class="form-group">
+              <%= f.label :name %><br>
+              <%= f.text_field :name, autofocus: true, class: "form-control" %>
+            </div>
+            <div class="form-group">
+              <%= f.label :address %><br>
+              <%= f.text_area :address, class: "form-control" %>
+            </div>
+            <div class="form-group">
+              <%= f.label :latitude %><br>
+              <%= f.text_area :latitude, class: "form-control" %>
+            </div>
+            <div class="form-group">
+              <%= f.label :image %><br>
+              <%= f.file_field :image, class: "form-control" %>
+            </div> 
+            <div class="form-group">
+              <%= f.submit "Add Business", class: "btn btn-primary" %>
+              <%= link_to "Cancel", businesses_path, class: "btn btn-primary" %>
+            </div>
+
+          <% end %>
+        </div>
+      </div>
     </div>
-  <% end %>
+  </div>
+</div>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :address %><br>
-    <%= f.text_area :address %>
-  </div>
-  <div class="field">
-    <%= f.label :latitude %><br>
-    <%= f.text_area :latitude %>
-  </div>
-  <div class="field">
-    <%= f.label :longitude %><br>
-    <%= f.text_area :longitude %>
-  </div>
-  <div class="field">
-    <%= f.label :rating %><br>
-    <%= f.text_field :rating %>
-  </div>
-  <div class="field">
-    <%= f.label :image %><br>
-    <%= f.file_field :image %>
-  </div> 
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+
+
+
+
+
