--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -42,6 +42,7 @@
     scoreName: 'review[rating]',
     target: '#hint',
     hints: ["Eek! Methinks not.", "Meh. I've experienced better.", "A-OK", "Yay! I'm a fan.", "Woohoo! As good as it gets!"],
-    targetKeep: true
+    targetKeep: true,
+    cancel: true
   });
 </script>
