--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,6 +22,7 @@
 
 body {
   background: #F5F5F1;
+  font-family: 'Lato', sans-serif;
 }
 
 .review_title {
@@ -38,4 +39,8 @@ body {
 .review-map {
   margin: 10px auto;
 }
+
+
+
+
   
