--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -11,7 +11,11 @@
     <div class="col-sm-6 col-md-3">
       <div class="thumbnail">
         <%= link_to (image_tag business.image.url(:medium), class: 'image'), business %>
+        <div class="text-center">
+          <strong><%= link_to business.name, business %></strong>
+        </div>
       </div>
+
     </div>
    <% end %>
 </div>
