--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,33 +1,12 @@
-<nav class="navbar navbar-default" role="navigation">
+<div class="row">
   <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <%= link_to "Yelper", root_path, class: "navbar-brand" %>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <% if user_signed_in? %>
-          <li><%= link_to "Add A Business", new_business_path, class: "active" %></li>
-          <li><%= link_to "Account", edit_user_registration_path %></li>
-          <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
-        <% else %>
-          <li><%= link_to "Sign Up", new_user_registration_path, class: "active" %></li>
-          <li><%= link_to "Sign In", new_user_session_path, class: "active" %></li>
-        <% end %>
-      </ul>
-      <%= form_tag businesses_path, method: :get, class: "navbar-form navbar-right", role: "search" do %>
-        <p>
-          <%= text_field_tag :search, params[:search], class: "form-control" %>
-          <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
-        </p>
+    <div class="header col-md-6 col-md-offset-3">
+      <%= form_tag businesses_path, method: :get, class: "input-group", role: "search" do %>
+        <%= text_field_tag :search, params[:search], class: "form-control", placeholder: "Find restaurants, cafes, fun places" %>
+        <span class="input-group-btn">
+          <%= submit_tag "Search", name: nil, class:"btn btn-default" %>
+        </span>
       <% end %>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+    </div>
+  </div>
+</div>
