Replaced paperclip with CarrierWave for image uploading

--- a/app/views/businesses/_form.html.erb
+++ b/app/views/businesses/_form.html.erb
@@ -28,7 +28,7 @@
               <%= f.file_field :image, class: "form-control" %>
             </div> 
             <div class="form-group">
-              <%= f.submit "Add Business", class: "btn btn-primary" %>
+              <%= f.submit "Edit Business", class: "btn btn-primary" %>
               <%= link_to "Cancel", businesses_path, class: "btn btn-primary" %>
             </div>
 
