--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,12 +13,14 @@
   <%= render 'layouts/navbar' %>
   <%= render 'layouts/header' %>
   
-  <div class="container">
-    <% flash.each do |name, msg| %>
-      <%= content_tag(:div, msg, class: "alert alert-info") %>
-    <% end %>
-    
-    <%= yield %>
+  <div class="main-content">
+    <div class="container">
+      <% flash.each do |name, msg| %>
+        <%= content_tag(:div, msg, class: "alert alert-info") %>
+      <% end %>
+      
+      <%= yield %>
+    </div>
   </div>
 
 </body>
