--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,10 @@
-<div class="row">
-  <div class="container">
-    <div class="header col-md-6 col-md-offset-3">
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
       <%= form_tag businesses_path, method: :get, class: "input-group", role: "search" do %>
         <%= text_field_tag :search, params[:search], class: "form-control", placeholder: "Find restaurants, cafes, fun places" %>
         <span class="input-group-btn">
-          <%= submit_tag "Search", name: nil, class:"btn btn-default" %>
+           <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>  
         </span>
       <% end %>
     </div>
