--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <%= form_for([@business, @review]) do |f| %>
+        <%= form_for([@business, @review], html: { multipart: true })  do |f| %>
           <% if @review.errors.any? %>
             <div id="error_explanation">
               <h2><%= pluralize(@review.errors.count, "error") %> prohibited this review from being saved:</h2>
@@ -26,6 +26,10 @@
             <%= f.label :price %><br>
             <%= f.number_field :price, class: "form-control" %>
           </div>
+          <div class="form-group">
+            <%= f.label :image %><br>
+            <%= f.file_field :image, class: "form-control" %>
+          </div> 
           <div class="form-group">
             <%= f.submit "Create Review", class: "btn btn-danger" %>
             <%= link_to "Cancel", @business, class: "btn btn-danger" %>
