--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -44,6 +44,20 @@ body {
   margin-top: 20px;
 }
 
+.navbar-default {
+  background-color: #ff7200;
+  .navbar-brand {
+    color: white;
+  }
+}
+
+.navbar-default .navbar-nav li a {
+  color: white;
+}
+
+
+
+
 
 
 
