--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <%= form_for([@business, @review], html: { multipart: true })  do |f| %>
+        <%= form_for([@business, @review], html: { multipart: true }) do |f| %>
           <% if @review.errors.any? %>
             <div id="error_explanation">
               <h2><%= pluralize(@review.errors.count, "error") %> prohibited this review from being saved:</h2>
@@ -28,7 +28,7 @@
           </div>
           <div class="form-group">
             <%= f.label :image %><br>
-            <%= f.file_field :image, class: "form-control" %>
+            <%= f.file_field :image, multiple: true, class: "form-control" %>
           </div> 
           <div class="form-group">
             <%= f.submit "Create Review", class: "btn btn-danger" %>
