Updated color theme

--- a/app/assets/stylesheets/businesses.css.scss
+++ b/app/assets/stylesheets/businesses.css.scss
@@ -10,3 +10,13 @@
 .basic-info .expand-info .address {
   margin-top: 10px, auto;
 }
+
+.jumbotron .btn {
+  background: #ff7200;
+  color: white;
+}
+
+.basic-info .btn {
+  background: #ff7200;
+  color: white;
+}
