--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -8,14 +8,17 @@
           <span class="star-rating" data-score = <%= @avg_review %> ></span>
           <span class="item"><em><%= "#{@reviews.length} reviews"%></em></span>
           <span class="item">Average Cost: <%= @avg_price %></span>
-          <div class="item"></div><br>
         </div>
         <div class="expand-info address">
           <span>Address: </span><span><%= @business.address %></span>
         </div><br>
-        <div class="action"><%= link_to "Write a Review", new_business_review_path(@business), class: "btn btn-danger" %></div>
+        <div class="action"><%= link_to "Write a Review", new_business_review_path(@business), class: "btn btn-default" %></div>
       </div>
+      <% if @reviews.blank? %>
+          <div class="lead">No reviews just yet, would you like to add the first?</div>
+      <% end %>
     </div>
+
     <!-- Static Map -->
     <div class="col-md-5">
       <div class="review-map">
@@ -24,10 +27,7 @@
     </div>
     <!-- Reviews -->
     <div class="col-md-7">
-      <% if @reviews.blank? %>
-        <h3>No reviews just yet, would you like to add the first?</h3>
-        <%= link_to "Write a Review", new_business_review_path(@business), class: "btn btn-danger" %>
-      <% else %>
+
         <% @reviews.each do |review| %>
           <div class="review-wrapper">
             <div class="star-rating" data-score= <%= review.rating %> ></div>
@@ -40,7 +40,7 @@
             <%= image_tag review.image_url(:thumb) if review.image? %>
           </div>
         <% end %>
-      <% end %>
+
     </div>
   </div>
 </div>
